Fix image overflow and positioning issue

--- a/app.css
+++ b/app.css
@@ -1,7 +1,6 @@
 body {
     margin: 0px;
     font-family: Roboto;
-    /* background-color: #1f2937; */
 }
 
 
@@ -33,8 +32,9 @@ body {
 
 .top-container {
     height: 300px;
+    width: auto;
     margin: 0 auto;
-    padding: 1px 48px;
+    padding: 0px 48px;
     background-color: #1f2937;
     display: flex;
 }
@@ -53,19 +53,16 @@ body {
 
 .main-title {
     width: 50%;
-    /* box-sizing: content-box; */
-    /* display: inline-block; */
-    /* flex-wrap: wrap; */
 }
 
-img {
-    max-width: 100%;
-    height: auto;
+.image-container {
+    width: 50%;
+    /* overflow: hidden; */
 }
 
 .main-image {
-    /* padding: 10px; */
-    /* display: flex; */
-    width: 50%;
-    /* display: inline-block; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 70%;
 }
